- Fixed: Chime (ByronSX) when turning on manualy inside domoticz
- Changed: Now letting SQLite calculating the date/time for clearing up the short-log
- Fixed: EventSystem, Calling internal URL from within blocky resulted in a unresponsive system (deadlock)
- Implemented: Started with custom icons for On/Off switches

Version 1.0.940 (July 31th 2013)
- Implemented: Lighting2, when a Group On/Off is received, all switched with the same ID will be set to 'On' or 'Off' (internally)
- Fixed: Z-Wave, Wattage scale factor was not initialized
- Implemented: Application settings, mobile view (mobile, or as normal dashboard), iPhone will always be mobile theme
- Implemented: Wind Speed Unit option (m/s, km/h, mph, knots)
- Fixed: Notification for internal combined temp/hum sensors (La Crosse TX3)
- Implemented: Moisture Sensor (for example from Davis)
- Fixed: Wind Speed/Gust should now be translated
- Implemented: Initial Support for Weather Underground sensors
- Implemented: Add manual switch support for Lighting1/Energenie
- Changed: Weather Underground updates now every 15 minutes
- Fixed: Users with old event table could have a crash when starting domoticz
- Fixed: Set RFXCOM mode, Visonic was not working
- Implemented: Visibility Sensor (for example from Weather Underground)
- Changed: Weather Underground updates now every 10 minutes
- Fixed: possible curl bug when DNS timeouts
- Implemented: Scenes, now have an On/Off button
- Implemented: Scenes, Dimmer Level
- Fixed: Drag/Drop of devices
- Fixed: YouLess day measurement
- Implemented: Z-Wave, thermostat SetPoint
- Implemented: Dew Point calculation for sensors with Temperature + Humidity
- Changed: Last xx hours/days graph, Only Gas/Electricity sensors with same previous value will be ignored
- Implemented: Spanish language support (thanks to the community!)
- Implemented: Dew Point notifications
- Implemented: Dew Point logging (not visible yet!)